--- a/src/templates/base.html.twig
+++ b/src/templates/base.html.twig
@@ -129,6 +129,13 @@
         width: 140px;
         margin:auto;
       }
+      .alert.alert-danger{
+        color: red;
+        text-align: center;
+      }
+      a{
+        text-decoration: none;
+      }
       </style>
     </head>
     <body>
