--- a/src/templates/security/login.html.twig
+++ b/src/templates/security/login.html.twig
@@ -3,29 +3,35 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form method="post">
+<form class="connect" method="post">
+    <div class="top-bar">
+        <a class="btn-red"></a>
+        <a class="btn-orange"></a>
+        <a class="btn-green"></a>
+      </div>
+    <div class="form-content">
+        <img src="img/logo.png" alt="logo" class="logo"/>
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
     {% if app.user %}
         <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            Vous êtes connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Déconnection</a>
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" autocomplete="email" placeholder="Email" required autofocus>
+
+    <input type="password" name="password" id="inputPassword" autocomplete="current-password" placeholder="********" required>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+    <button type="submit">
+        Connexion
     </button>
+    <a href="{{ path('app_register') }}" class="option">S'enregistrer</a>
 </form>
 {% endblock %}
