modified:   Dockerfile 	new file:   src/migrations/Version20240214142008.php 	new file:   src/src/Controller/AdminController.php 	new file:   src/templates/admin/index.html.twig 	modified:   src/templates/base.html.twig 	modified:   src/templates/registration/register.html.twig 	modified:   src/templates/security/login.html.twig

--- a/src/templates/base.html.twig
+++ b/src/templates/base.html.twig
@@ -18,7 +18,7 @@
       .connect{
         margin: auto;
         width: 325px;
-        height: 350px;
+        height: 370px;
         background-color: white;
         border-radius: 8px;
         opacity: 0.9;
@@ -118,9 +118,10 @@
       a.btn-admin{
         display: flex;
         flex-direction: column;
-        width: 120px;
+        width: 140px;
         text-align: center;
         cursor: pointer;
+        color: #1290cc;
       }
       a.btn-admin:hover{
         opacity: 0.8;
@@ -135,6 +136,21 @@
       }
       a{
         text-decoration: none;
+      }
+      .form-content >div{
+        display: flex;
+      }
+      .condition-label{
+        text-wrap: nowrap;
+      }
+      .form-content >.inline{
+        display: flex;
+        flex-direction: row;
+        margin-top: 20px;
+      }
+      input[type="checkbox"]{
+        width: 80px;
+        margin: 0;
       }
       </style>
     </head>
