--- a/src/templates/loged/index.html.twig
+++ b/src/templates/loged/index.html.twig
@@ -12,6 +12,11 @@
     <div class="form-content">
       <img src="img/logo.png" alt="logo" class="logo-admin"/>
       <h1>Vous êtes connecté!</h1>
+      {% if app.user %}
+        <div class="mb-3">
+            Vous êtes connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Déconnection</a>
+        </div>
+    {% endif %}
     </div>  
   </div>
 {% endblock %}
