--- a/src/templates/registration/register.html.twig
+++ b/src/templates/registration/register.html.twig
@@ -21,7 +21,7 @@
         {{ form_widget(registrationForm.agreeTerms, {'attr': {'class': 'condition'}}) }}
         <label for="{{ registrationForm.agreeTerms.vars.id }}" class="condition-label">Conditions générales</label>    
        </div>
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn">S'enregistrer</button>
         <a href="{{ path('app_login') }}" class="option">Connexion</a>
     </div>
     {{ form_end(registrationForm) }}
